# CP-Hub

./: .dockerignore  .env_example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml  pytest.yml
alembic/: env.py
alembic/versions/: a1f3e2d4c5b6_add_exp_and_user_stage_progress.py  bf81cd1b2ff7_create_users_and_user_stats_tables.py  ce038a109e28_add_leetcode_id_to_users.py  e6f8a0b2c4d6_create_group_task_tables.py
backend/app/core/: config.py  db.py
backend/app/crud/: group_task.py  stage.py  stage_def.py  user.py
backend/app/models/: __init__.py  group_task.py  group_task_problem.py  user.py  user_stage_progress.py  user_stats.py
backend/app/services/group_task/: service.py
backend/app/services/leetcode/: client.py  queries.py
backend/app/services/stage/: graph.py  service.py
backend/app/services/stage/verifiers/: atcoder.py  base.py  codeforces.py  leetcode.py
bot/: config.py  main.py
bot/cogs/: account.py  group_task.py  leaderboard.py  leetcode.py  mention_chat.py  profile.py  stage.py
static/: stages.json
tests/: test_docker.py
tests/backend/crud/: conftest.py  test_group_task.py  test_platform_stats.py  test_stage.py  test_stage_def.py  test_user.py
tests/backend/services/: test_group_task_service.py  test_leetcode.py  test_level.py  test_stage_graph.py
